# klip

./: CHECKLIST.md  Cargo.toml  DOCUMENTATION_MAP.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  PLAN_SUMMARY.md  QUICKSTART.md  README.md  TECHNICAL_SPEC.md  TESTING.md
.github/: dependabot.yml
.github/workflows/: build_and_release.yml  copilot-setup-steps.yml
src/: clipboard.rs  error.rs  main.rs
