[package]
name = "klip"
version = "0.1.0"
edition = "2021"
authors = ["Tim Rogers <timrogers@github.com>"]
description = "Cross-platform MCP server allowing agents to copy values to the system's clipboard"
repository = "https://github.com/timrogers/klip"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["mcp", "clipboard", "model-context-protocol"]

[dependencies]
# MCP server
rmcp = { version = "0.14.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Clipboard
arboard = "3.4.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.2", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "klip"
path = "src/main.rs"
